# herdr-mirror

./: Cargo.toml  README.md  herdr-plugin.toml
.github/workflows/: release.yml
docs/: mux-design.md
src/: agent.rs  api.rs  config.rs  daemon.rs  foreground.rs  grid.rs  main.rs  mirror.rs  mux.rs  muxclient.rs  pane.rs  predict.rs  protocol.rs  remote.rs  remote_action.rs  state.rs  util.rs
tests/: agent_loopback.rs  mux_integration.rs  pane_mux.rs
