[package]
name = "herdr-mirror"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Mirror a remote herdr server's workspaces and agents into the local sidebar"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std", "net", "process", "time", "sync", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
base64 = "0.22"
libc = "0.2"
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
